# scrab-medical-data

./: README.md
backend/scrabmd-app/: apipoints.txt
backend/scrabmd-app/medical-app/: .env  Cargo.toml  cds-event-001.json  cds-event-002.json  event.json  eventb.json
backend/scrabmd-app/medical-app/src/: gemini.rs  http_handler.rs  http_page.rs  libs.rs  llm_engine.rs  main.rs  scrab_errors.rs  test2.rs
backend/scrabmd-app/medical-app/x-events/: DiagnosticReport.json  FHIR-example.json  cds-event-001.json  cds-event-002.json  csd-event.json  response-medical.json  response.json
backend/scrabmd-app/medical-cds-hook/: Cargo.toml  MedicalCdsAPI-v1-oas30.yaml
backend/scrabmd-app/medical-cds-hook/src/: http_handler.rs  libs.rs  main.rs  test.rs
backend/scrabmd-app/medical-smartapp/: .env  Cargo.toml  README.md
backend/scrabmd-app/medical-smartapp/src/: cds_hooks.rs  http_handler.rs  http_page.rs  intro_console.rs  libs.rs  llm_allergies.rs  main.rs  oidc_database.rs  oidc_request.rs  u_code_verif.rs  url_extractor.rs  uu_http_handler.rs  x-http_handler-session.rs  xbase-form.html
backend/scrabmd-app/medical-smartapp/src/gemini/: chat.rs  embed.rs  error.rs  libs.rs  requests.rs  utils.rs
backend/scrabmd-app/medical-smartapp/x-docs/: create_table.sh  names_page.html  url-api.txt
backend/scrabmd-app/medical-smartapp/x-files/: 01-base.html  02-simple.html  cc-page.html  flow_data.txt  java_frame.js  patient-data.json  patients_name.json  svg-data.txt  url_data.txt
backend/tests/extract-data/: Cargo.toml
backend/tests/extract-data/src/: main.rs
backend/tests/test-app/: Cargo.toml  README.md
components/: patient-dashboard.tsx  patient-timeline.tsx  vital-signs.tsx
data/: patient-timeline.json
frontend/: .gitignore  package.json  v0-user-next.config.js
frontend/app/: globals.css  page.tsx
frontend/components/: appointments.tsx  patient-info.tsx  treatment-history.tsx  vital-signs.tsx
frontend/data/: patient-timeline.json
frontend/public/data/: patient-data.json
frontend/types/: patient.ts
types/: patient.ts
