[package]
name = "medical-app"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_http = "0.13.0"
serde_json = "1.0.140"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
  "blocking"
] }
url = "2.5.4"
chrono = "0.4"
futures = "0.3"
async-stream = "0.3.6"
base64 = "0.22.1"
env_logger = "0.11.6"
log = "0.4.25"

tokio = { version = "1", features = ["macros"] }
thiserror = "2.0.12"
