[package]
name = "medical-smartapp"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = "0.13.0"
aws_lambda_events = "0.16.0"
aws-sdk-dynamodb = "1.66.0"
aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
url = "2.5.4"
http = "1.2.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "blocking"
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
rand = "0.9.0"
sha2 = "0.10.8"
base64 = "0.22.1"

tokio = { version = "1", features = ["macros"] }
